--- a/src/app/sass/common/_general.scss
+++ b/src/app/sass/common/_general.scss
@@ -959,7 +959,7 @@ input::-ms-input-placeholder,
       left: 0;
       width: 100%;
       border-radius: 20px 0px 0px 20px;
-      background: linear-gradient(154deg, #d2eaef 0%, #86bbf1 100%);
+      background: linear-gradient(154deg, #E8D7D0 0%, #F74C02 100%);
       @media (max-width: 991px) {
         width: 100%;
         border-radius: 20px 20px 0px 0px;
