--- a/src/app/sass/shortcode/_accordion.scss
+++ b/src/app/sass/shortcode/_accordion.scss
@@ -15,7 +15,7 @@
       margin-bottom: 20px;
     }
     &.active {
-      background-color: #FE4B06;
+      background-color: #E9722B;
       margin-left: 50px;
       @media (max-width: 991px) {
         margin-left: 0;
