--- a/src/app/sass/shortcode/_iconbox.scss
+++ b/src/app/sass/shortcode/_iconbox.scss
@@ -594,7 +594,7 @@
 .cs_iconbox.cs_style_11 {
   display: flex;
   align-items: center;
-  background-color: #FE4B06;
+  background-color: #E9722B;
   padding: 38px 54px;
   gap: 30px;
   @media (max-width: 1700px) {
