--- a/src/app/sass/_custom.scss
+++ b/src/app/sass/_custom.scss
@@ -40,6 +40,7 @@
   .cs_hero_subtitle {
     position: relative;
     z-index: 1;
+    
   }
 
   .cs_hero_text {
@@ -66,7 +67,7 @@
         width: 20px;
         height: 20px;
         border-radius: 50%;
-        background-color: black;
+        background-color: #e67e22;
         color: white;
         margin-right: 12px;
         flex-shrink: 0;
