--- a/src/app/sass/common/_general.scss
+++ b/src/app/sass/common/_general.scss
@@ -260,6 +260,10 @@ hr {
 .cs_accent_color {
   color: $accent;
 }
+.cs_ternary_color {
+  color: $ternary;
+}
+
 .cs_white_color {
   color: #fff;
 }
@@ -368,10 +372,12 @@ hr {
     transition: all 0.4s ease-in-out;
   }
   &::before {
-    background-image: linear-gradient(134deg, #EEA88A 0%, #EEA88A 100%);
+    background-image: linear-gradient(134deg, #d35400 0%, #d35400 100%);
+  
+
   }
   &::after {
-    background-image: linear-gradient(270deg, #307bc4 0%, #274760 100%);
+        background-image: linear-gradient(134deg, #e67e22  0%, #e67e22  100%);
     opacity: 0;
   }
   &:hover {
@@ -463,7 +469,6 @@ hr {
   border-radius: 30px;
   outline: none;
   transition: all 0.3s ease;
-  border: 1px solid rgba($accent, 0.5);
   padding: 26px 30px;
   background-color: transparent;
   &:focus {
