--- a/src/app/sass/common/_general.scss
+++ b/src/app/sass/common/_general.scss
@@ -45,7 +45,7 @@
   }
 }
 .cs_mt_minus_110 {
-  margin-top: -110px;
+  margin-top: 0px;
   position: relative;
   z-index: 5;
   @media (max-width: 991px) {
@@ -283,7 +283,7 @@ hr {
 .cs_half_bg_2 {
   position: relative;
   &::before {
-    content: '';
+    content: "";
     position: absolute;
     height: 60%;
     width: 100%;
@@ -362,7 +362,7 @@ hr {
   }
   &::before,
   &::after {
-    content: '';
+    content: "";
     position: absolute;
     height: 100%;
     width: 100%;
@@ -373,11 +373,9 @@ hr {
   }
   &::before {
     background-image: linear-gradient(134deg, #d35400 0%, #d35400 100%);
-  
-
   }
   &::after {
-        background-image: linear-gradient(134deg, #e67e22  0%, #e67e22  100%);
+    background-image: linear-gradient(134deg, #e67e22 0%, #e67e22 100%);
     opacity: 0;
   }
   &:hover {
@@ -402,7 +400,7 @@ hr {
   position: relative;
   padding-bottom: 5px;
   &::before {
-    content: '';
+    content: "";
     position: absolute;
     height: 1px;
     width: 100%;
@@ -435,7 +433,7 @@ hr {
   transition: all 0.4s ease-in-out;
   border: 2px solid #e67e22; // Orange border
   color: #e67e22; // Orange text
-  
+
   @media (max-width: 991px) {
     padding: 12px 30px;
   }
@@ -450,7 +448,7 @@ hr {
     position: relative;
     z-index: 2;
   }
-  
+
   i {
     display: inline-block;
     position: relative;
@@ -460,7 +458,7 @@ hr {
     z-index: 2;
     transition: all 0.4s ease-in-out;
   }
-  
+
   img {
     width: inherit;
     height: inherit;
@@ -468,23 +466,23 @@ hr {
     top: 0;
     transition: all 0.4s ease-in-out;
     filter: brightness(0) invert(1);
-    
+
     &:first-child {
       left: -20px;
     }
-    
+
     &:last-child {
       left: 0;
     }
   }
-  
+
   // Hover state - only border/text color change
   &:hover {
     color: darken(#e67e22, 10%);
     border-color: darken(#e67e22, 10%);
     background-color: transparent;
     box-shadow: none;
-    
+
     img {
       &:first-child {
         left: 0px;
@@ -494,7 +492,7 @@ hr {
       }
     }
   }
-  
+
   // Active state - simple press effect
   &:active {
     transform: translateY(1px);
@@ -510,7 +508,7 @@ hr {
     display: inline-block;
     position: relative;
     &::before {
-      content: '';
+      content: "";
       position: absolute;
       height: 2px;
       width: 100%;
@@ -703,7 +701,7 @@ input::-ms-input-placeholder,
       z-index: 2;
     }
     &::before {
-      content: '';
+      content: "";
       position: absolute;
       height: calc(100% + 42px);
       width: calc(100% + 160px);
@@ -781,7 +779,7 @@ input::-ms-input-placeholder,
         padding-top: 30px;
       }
       &::before {
-        content: '';
+        content: "";
         position: absolute;
         height: 10px;
         width: 10px;
@@ -913,7 +911,7 @@ input::-ms-input-placeholder,
     display: block;
     padding-left: 32px;
     &::before {
-      content: '';
+      content: "";
       height: 20px;
       width: 20px;
       border: 1px solid $accent;
@@ -923,7 +921,7 @@ input::-ms-input-placeholder,
       left: 0;
     }
     &::after {
-      content: '';
+      content: "";
       height: 14px;
       width: 14px;
       background-color: $accent;
@@ -953,8 +951,8 @@ input::-ms-input-placeholder,
     opacity: 0.6;
     background: radial-gradient(
       42.35% 42.35% at 50% 50%,
-     #E8D7D0 0%,
-      #E8D7D0 100%
+      #e8d7d0 0%,
+      #e8d7d0 100%
     );
     position: absolute;
     top: 31%;
@@ -1041,14 +1039,14 @@ input::-ms-input-placeholder,
       width: 100%;
     }
     &::before {
-      content: '';
+      content: "";
       position: absolute;
       height: 60%;
       top: 0;
       left: 0;
       width: 100%;
       border-radius: 20px 0px 0px 20px;
-      background: linear-gradient(154deg, #E8D7D0 0%, #F74C02 100%);
+      background: linear-gradient(154deg, #e8d7d0 0%, #f74c02 100%);
       @media (max-width: 991px) {
         width: 100%;
         border-radius: 20px 20px 0px 0px;
@@ -1227,7 +1225,7 @@ input::-ms-input-placeholder,
       position: relative;
       transition: all 0.3s ease;
       &::before {
-        content: '';
+        content: "";
         position: absolute;
         height: 1px;
         width: 0%;
@@ -1497,7 +1495,7 @@ input::-ms-input-placeholder,
       span {
         position: relative;
         &::before {
-          content: '';
+          content: "";
           position: absolute;
           height: 1px;
           width: 100%;
@@ -1563,7 +1561,7 @@ input::-ms-input-placeholder,
       position: relative;
       padding-left: 28px;
       &::before {
-        content: '';
+        content: "";
         height: 10px;
         width: 10px;
         border-radius: 50%;
@@ -1688,7 +1686,7 @@ input::-ms-input-placeholder,
   margin-top: 15px;
   &::before,
   &::after {
-    content: '';
+    content: "";
     height: calc(100% - 40px);
     width: 10px;
     background-color: #fff;
@@ -1720,7 +1718,7 @@ input::-ms-input-placeholder,
   > div {
     position: relative;
     &::before {
-      content: '';
+      content: "";
       position: absolute;
       height: 1px;
       width: 100vw;
@@ -1746,7 +1744,7 @@ input::-ms-input-placeholder,
   border-bottom: none;
   &::before,
   &::after {
-    content: '';
+    content: "";
     position: absolute;
     height: 12px;
     width: calc(100% - 130px);
@@ -1809,7 +1807,7 @@ input::-ms-input-placeholder,
   }
 }
 .cs_contact_form.cs_style_1 {
-  padding: 83px 21.5%;
+  padding: 50px 5%;
   box-shadow: 0px 4px 21px 1px rgba(48, 123, 196, 0.1);
   @media (max-width: 991px) {
     padding: 50px;
@@ -1955,7 +1953,7 @@ input::-ms-input-placeholder,
         padding: 40px 30px 40px 80px;
       }
       &::before {
-        content: '“';
+        content: "“";
         position: absolute;
         left: 48px;
         top: 55px;
@@ -2244,7 +2242,7 @@ input::-ms-input-placeholder,
       display: inline-block;
       position: relative;
       &::before {
-        content: '';
+        content: "";
         position: absolute;
         height: 1px;
         width: 100%;
@@ -2260,7 +2258,7 @@ input::-ms-input-placeholder,
       }
     }
     &::before {
-      content: '';
+      content: "";
       position: absolute;
       width: 27px;
       height: 22px;
@@ -2493,7 +2491,7 @@ a.ui-button:active,
   background-color: rgba($accent, 0.15);
   color: $accent;
 }
-.select2-container--default .select2-results__option[aria-selected='true'] {
+.select2-container--default .select2-results__option[aria-selected="true"] {
   background-color: $accent;
   color: white;
 }
@@ -2730,5 +2728,179 @@ a.ui-button:active,
         display: flex;
       }
     }
+  }
+}
+
+
+
+
+.cs_contact_form {
+  background: #fff;
+  padding: 10px 50px;
+  border-radius: 30px;
+  box-shadow: 0 10px 50px rgba(0, 0, 0, 0.1);
+  margin-top: -110px;
+  position: relative;
+  z-index: 2;
+}
+
+.cs_contact_label {
+  font-size: 14px;
+  font-weight: 600;
+  color: $accent;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-bottom: 10px;
+  margin-top: 0;
+}
+
+.cs_section_title {
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 1.2;
+  color: #1a1a1a;
+  margin-bottom: 0;
+}
+
+.cs_section_subtitle {
+  font-size: 16px;
+  line-height: 1.6;
+  color: #666;
+  margin: 0;
+}
+
+.cs_contact_info_wrap {
+  padding-right: 30px;
+}
+
+.cs_contact_info_item {
+  display: flex;
+  align-items: flex-start;
+  gap: 15px;
+  margin-bottom: 30px;
+}
+
+.cs_contact_info_item:last-child {
+  margin-bottom: 0;
+}
+
+.cs_contact_info_icon {
+  width: 35px;
+  height: 35px;
+  background: $accent;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  flex-shrink: 0;
+}
+
+.cs_contact_info_right p {
+  margin: 0;
+  font-weight: 500;
+  color: #1a1a1a;
+  line-height: 1.6;
+  font-size: 14px;
+}
+
+.cs_contact_info_right p:not(:last-child) {
+  margin-bottom: 5px;
+}
+
+.cs_form_wrap {
+  padding-left: 30px;
+  border-left: 1px solid #e0e6ed;
+}
+
+.cs_input_label {
+  display: block;
+  font-weight: 600;
+  color: #1a1a1a;
+  margin-bottom: 8px;
+  font-size: 14px;
+}
+
+.cs_form_field {
+  width: 100%;
+  padding: 15px 20px;
+  border: 1px solid #e0e6ed;
+  border-radius: 10px;
+  font-size: 14px;
+  background: #fff;
+  transition: all 0.3s ease;
+  outline: none;
+}
+
+.cs_form_field:focus {
+  border-color: $primary;
+  box-shadow: 0 0 0 3px rgba(44, 90, 160, 0.1);
+}
+
+.cs_form_field::placeholder {
+  color: #999;
+}
+
+.cs_textarea {
+  min-height: 120px;
+  resize: vertical;
+}
+
+
+.cs_height_18 {
+  height: 18px;
+}
+.cs_height_25 {
+  height: 25px;
+}
+.cs_height_42 {
+  height: 42px;
+}
+.cs_height_55 {
+  height: 55px;
+}
+.cs_height_xl_25 {
+  height: 25px;
+}
+
+@media (max-width: 991px) {
+  .cs_contact_form {
+    padding: 40px 30px;
+    margin-top: -60px;
+  }
+
+  .cs_section_title {
+    font-size: 36px;
+  }
+
+  .cs_contact_info_wrap {
+    padding-right: 0;
+    margin-bottom: 40px;
+  }
+
+  .cs_form_wrap {
+    padding-left: 0;
+    border-left: none;
+    border-top: 1px solid #e0e6ed;
+    padding-top: 40px;
+  }
+}
+
+@media (max-width: 575px) {
+  .cs_contact_form {
+    padding: 30px 20px;
+  }
+
+  .cs_section_title {
+    font-size: 28px;
+  }
+
+  .cs_btn {
+    width: 100%;
+    justify-content: center;
+  }
+
+  .cs_contact_info_wrap {
+    padding-right: 0;
   }
 }
